@@ -11,8 +11,8 @@ bin_PROGRAMS = ${fb_programs}
 fbxine_DEPENDENCIES = $(top_builddir)/src/common/libcommon.la
 fbxine_LDADD = @XINE_LIBS@ $(LIRC_LIBS) $(DYNAMIC_LD_LIBS) -lm $(top_builddir)/src/common/libcommon.la $(NCURSES_LIB)
 
-fbxine_SOURCES = main.c lirc.c actions.c keys.c options.c callback.c
-noinst_HEADERS = main.h lirc.h actions.h keys.h options.h callback.h
+fbxine_SOURCES = main.c lirc.c actions.c keys.c options.c callback.c stdctl.c
+noinst_HEADERS = main.h lirc.h actions.h keys.h options.h callback.h stdctl.h
 
 $(top_builddir)/src/common/libcommon.la:
 	@cd $(top_builddir)/src/common && $(MAKE) libcommon.la
