@@ -19,22 +19,21 @@
  *
  * $Id$
  *
- * lirc specific stuff
+ * stdctl specific stuff
  *
  */
 
-#ifndef LIRC_H
-#define LIRC_H
+#ifndef STDCTL_H
+#define STDCTL_H
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
 
-#ifdef HAVE_LIRC
+/*
+ * Initialize stdctl support
+ */
 
-void lirc_start(void);
-void lirc_stop(void);
-
-#endif
+void fbxine_init_stdctl(void);
 
 #endif
